Fix Question API
