# docs/swagger.yaml
@@ -481,6 +481,18 @@ definitions:
     - git_repo_url
     - title
     type: object
+  handlers.BasicAuthentication:
+    properties:
+      password:
+        example: password
+        type: string
+      username:
+        example: username
+        type: string
+    required:
+    - password
+    - username
+    type: object
   handlers.BulkCreateUser:
     properties:
       default_password:
@@ -540,13 +552,6 @@ definitions:
         items:
           type: string
         type: array
-    type: object
-  handlers.ChangeUserEmailDTO:
-    properties:
-      email:
-        type: string
-    required:
-    - email
     type: object
   handlers.ChangeUserPasswordRequest:
     properties:
@@ -694,7 +699,7 @@ definitions:
         items:
           $ref: '#/definitions/models.User'
         type: array
-      total_count:
+      totalCount:
         type: integer
     type: object
   handlers.GetLeaderboardResponseData:
@@ -901,6 +906,9 @@ definitions:
       processes:
         example: 10
         type: integer
+      score_map:
+        example: Score Map for every task info
+        type: string
       score_script:
         example: script example
         type: string
@@ -947,6 +955,9 @@ definitions:
         type: string
       execute_script:
         example: script example
+        type: string
+      score_map:
+        example: Score Map for get question info
         type: string
       score_script:
         example: script example
@@ -1195,8 +1206,6 @@ definitions:
         type: string
       enable:
         type: boolean
-      forget_password_request_time:
-        type: string
       gitea_token:
         type: string
       id:
@@ -1205,23 +1214,10 @@ definitions:
         type: boolean
       is_public:
         type: boolean
-      nonce:
-        type: string
       refresh_token:
         type: string
       reset_password:
         type: boolean
-      user_name:
-        type: string
-    type: object
-  utils.ExportQuestionScoreResponse:
-    properties:
-      earliest_best_submit_time:
-        type: string
-      git_user_repo_url:
-        type: string
-      score:
-        type: number
       user_name:
         type: string
     type: object
@@ -1307,48 +1303,6 @@ paths:
       summary: Update user information
       tags:
       - admin
-  /api/admin/{id}/user/change_email:
-    post:
-      consumes:
-      - application/json
-      description: Change the email of a user
-      parameters:
-      - description: User ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: New email
-        in: body
-        name: email
-        required: true
-        schema:
-          $ref: '#/definitions/handlers.ChangeUserEmailDTO'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/handlers.ResponseHTTP'
-            - properties:
-                data:
-                  $ref: '#/definitions/models.User'
-              type: object
-        "400":
-          description: Bad Request
-        "401":
-          description: Unauthorized
-        "403":
-          description: Forbidden
-        "500":
-          description: Internal Server Error
-      security:
-      - BearerAuth: []
-      summary: Change user email
-      tags:
-      - admin
   /api/admin/{id}/user/reset_password:
     post:
       consumes:
@@ -1389,15 +1343,15 @@ paths:
     get:
       consumes:
       - application/json
-      description: Export question score to CSV, XLSX, or JSON
+      description: Export question score to CSV or XLSX
       parameters:
       - description: Question ID
         in: path
         name: id
         required: true
         type: integer
-      - default: json
-        description: 'Export format: csv, xlsx, or json'
+      - default: csv
+        description: 'Export format: csv or xlsx'
         in: query
         name: format
         type: string
@@ -1629,8 +1583,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: Retrieve the leaderboard for a specific exam (Optional Authentication
-        if Admin will show all users, otherwise only public users)
+      description: Retrieve the leaderboard for a specific exam
       parameters:
       - description: Exam ID
         in: path
@@ -1665,8 +1618,6 @@ paths:
           description: Not Found
         "503":
           description: Service Unavailable
-      security:
-      - BearerAuth: []
       summary: Get the leaderboard for an exam
       tags:
       - Exam
@@ -2118,6 +2069,30 @@ paths:
       summary: Bulk create User v2
       tags:
       - Gitea
+  /api/gitea/auth:
+    post:
+      consumes:
+      - application/json
+      description: Use basic authentication to access the Gitea API
+      parameters:
+      - description: Basic Authentication
+        in: body
+        name: BasicAuthentication
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.BasicAuthentication'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Return access token
+          schema:
+            $ref: '#/definitions/handlers.ResponseHTTP'
+        "503":
+          description: Service Unavailable
+      summary: Use basic authentication to access the Gitea API
+      tags:
+      - Gitea
   /api/gitea/user:
     get:
       consumes:
@@ -2498,6 +2473,42 @@ paths:
       summary: Add a question
       tags:
       - Question
+  /api/questions/uqr/{UQR_ID}/question:
+    get:
+      consumes:
+      - application/json
+      description: Get a question by UQR_ID
+      parameters:
+      - description: ID of the UserQuestionRelation to get
+        in: path
+        name: UQR_ID
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/handlers.ResponseHTTP'
+            - properties:
+                data:
+                  $ref: '#/definitions/handlers.GetQuestionResponseData'
+              type: object
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "404":
+          description: Not Found
+        "503":
+          description: Service Unavailable
+      security:
+      - BearerAuth: []
+      summary: Get a question by UQR_ID
+      tags:
+      - Question
   /api/questions/user:
     get:
       consumes:
@@ -2834,8 +2845,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: Get the leaderboard (Optional Authentication if Admin will show
-        all users, otherwise only public users)
+      description: Get the leaderboard
       parameters:
       - description: page number of results to return (1-based)
         in: query
@@ -2865,8 +2875,6 @@ paths:
           description: Not Found
         "503":
           description: Service Unavailable
-      security:
-      - BearerAuth: []
       summary: Get the leaderboard
       tags:
       - Score
@@ -3048,8 +3056,6 @@ paths:
           description: Unauthorized
         "404":
           description: Not Found
-        "429":
-          description: Too Many Requests
         "503":
           description: Service Unavailable
       summary: Forget password
