# handlers/questions.go
@@ -312,18 +312,90 @@ func GetReadme(client *gitea.Client, userName string, gitRepoURL string) string 
 		for _, readmeFile := range readmeFiles {
 			fileContent, _, err := client.GetFile(userName, gitRepoURL, branch, readmeFile)
 			if err == nil {
-				// 處理圖片路徑並帶入 token
-				content := string(fileContent)
-				giteaBaseURL := config.GetGiteaExternalURL()
-
-				// Replace relative image paths with absolute paths
-				content = strings.ReplaceAll(content, "](./", "]("+giteaBaseURL+"/"+userName+"/"+gitRepoURL+"/raw/branch/"+branch+"/")
-
-				return content
+				return string(fileContent)
 			}
 		}
 	}
 	return ""
+}
+
+// GetQuestion is a function to get a question by UQR_ID
+// @Summary		Get a question by UQR_ID
+// @Description	Get a question by UQR_ID
+// @Tags			Question
+// @Accept			json
+// @Produce		json
+// @Param			UQR_ID	path	int	true	"ID of the UserQuestionRelation to get"
+// @Success		200		{object}	ResponseHTTP{data=GetQuestionResponseData}
+// @Failure		400
+// @Failure		401
+// @Failure		404
+// @Failure		503
+// @Router			/api/questions/uqr/{UQR_ID}/question [get]
+// @Security		BearerAuth
+func GetQuestion(c *gin.Context) {
+	db := database.DBConn
+	jwtClaims := c.Request.Context().Value(models.JWTClaimsKey).(*utils.JWTClaims)
+	token, err := utils.GetToken(jwtClaims.UserID)
+	if err != nil {
+		c.JSON(503, ResponseHTTP{
+			Success: false,
+			Message: "Failed to retrieve token",
+		})
+		return
+	}
+	client, err := gitea.NewClient(config.GetGiteaBaseURL(),
+		gitea.SetToken(token),
+	)
+	if err != nil {
+		c.JSON(503, ResponseHTTP{
+			Success: false,
+			Message: err.Error(),
+		})
+		return
+	}
+
+	UQR_IDstr := c.Param("UQR_ID")
+	UQR_ID, err := strconv.Atoi(UQR_IDstr)
+	if err != nil {
+		c.JSON(503, ResponseHTTP{
+			Success: false,
+			Message: "Invalid UQR ID",
+		})
+		return
+	}
+
+	var uqr models.UserQuestionRelation
+	db.Where("id = ? AND user_id = ?", UQR_ID, jwtClaims.UserID).Limit(1).Find(&uqr)
+	if uqr.ID == 0 {
+		c.JSON(404, ResponseHTTP{
+			Success: false,
+			Message: "Question not found",
+		})
+		return
+	}
+
+	var question models.Question
+	db.Where("id = ? AND is_active = ?", uqr.QuestionID, true).Limit(1).Find(&question)
+	if question.ID == 0 {
+		c.JSON(404, ResponseHTTP{
+			Success: false,
+			Message: "Question not found",
+		})
+		return
+	}
+
+	c.JSON(200, ResponseHTTP{
+		Success: true,
+		Message: "Question fetched successfully",
+		Data: GetQuestionResponseData{
+			Title:            question.Title,
+			Description:      question.Description,
+			README:           GetReadme(client, jwtClaims.Username, strings.Split(uqr.GitUserRepoURL, "/")[1]),
+			GitRepoURL:       uqr.GitUserRepoURL,
+			ParentGitRepoURL: question.GitRepoURL,
+		},
+	})
 }
 
 type GetQuestionByIDResponseData struct {
@@ -550,7 +622,7 @@ func GetUserQuestionByID(c *gin.Context) {
 			GetQuestionResponseData: GetQuestionResponseData{
 				Title:            question.Title,
 				Description:      question.Description,
-				README:           GetReadme(client, strings.Split(question.GitRepoURL, "/")[0], strings.Split(question.GitRepoURL, "/")[1]),
+				README:           GetReadme(client, jwtClaims.Username, strings.Split(uqr.GitUserRepoURL, "/")[1]),
 				GitRepoURL:       uqr.GitUserRepoURL,
 				ParentGitRepoURL: question.GitRepoURL,
 			},
@@ -648,60 +720,6 @@ func AddQuestion(c *gin.Context) {
 		return
 	}
 
-	// 檢查 Gitea 中是否存在該倉庫，不存在的話建立對應的倉庫
-	parts := strings.Split(req.GitRepoURL, "/")
-	if len(parts) != 2 {
-		c.JSON(400, ResponseHTTP{
-			Success: false,
-			Message: "Invalid GitRepoURL format",
-		})
-		return
-	}
-	owner := parts[0]
-	repo := parts[1]
-	token, err := utils.GetToken(jwtClaims.UserID)
-	if err != nil {
-		c.JSON(503, ResponseHTTP{
-			Success: false,
-			Message: "Failed to retrieve token",
-		})
-		return
-	}
-	client, err := gitea.NewClient(config.GetGiteaBaseURL(),
-		gitea.SetToken(token),
-	)
-	if err != nil {
-		c.JSON(503, ResponseHTTP{
-			Success: false,
-			Message: err.Error(),
-		})
-		return
-	}
-	_, _, err = client.GetRepo(owner, repo)
-	if err != nil {
-		// 如果 owner 不是當前用戶，則無權創建倉庫
-		if owner != jwtClaims.Username {
-			c.JSON(400, ResponseHTTP{
-				Success: false,
-				Message: "Repository does not exist and cannot be created under another user's account",
-			})
-			return
-		}
-		// 如果倉庫不存在，則創建一個新的倉庫
-		_, _, err := client.CreateRepo(gitea.CreateRepoOption{
-			Name:     repo,
-			Private:  false,
-			AutoInit: false,
-		})
-		if err != nil {
-			c.JSON(503, ResponseHTTP{
-				Success: false,
-				Message: "Failed to create repository in Gitea: " + err.Error(),
-			})
-			return
-		}
-	}
-
 	if err := db.Create(&newquestion).Error; err != nil {
 		c.JSON(503, ResponseHTTP{
 			Success: false,
@@ -796,6 +814,7 @@ type PatchQuestionRequest struct {
 	CompileScript *string `json:"compile_script" example:"script example"`
 	ExecuteScript *string `json:"execute_script" example:"script example"`
 	ScoreScript   *string `json:"score_script" example:"script example"`
+	ScoreMap      *string `json:"score_map" example:"Score Map for every task info"`
 	Memory        *uint   `json:"memory" example:"262144" description:"Memory limit in KB"`
 	StackMemory   *uint   `json:"stack_memory" example:"8192" description:"Stack memory limit in KB"`
 	Time          *uint   `json:"time" example:"1000" description:"CPU time limit in ms"`
@@ -895,6 +914,9 @@ func PatchQuestion(c *gin.Context) {
 	}
 	if updateQuestion.ExecuteScript != nil {
 		questionscript.ExecuteScript = *updateQuestion.ExecuteScript
+	}
+	if updateQuestion.ScoreMap != nil {
+		questionscript.ScoreMap = *updateQuestion.ScoreMap
 	}
 	if updateQuestion.Time != nil {
 		questionscript.Time = *updateQuestion.Time
@@ -1004,6 +1026,7 @@ type QuestionScripts struct {
 	CompileScript string `json:"compile_script" example:"script example"`
 	ExecuteScript string `json:"execute_script" example:"script example"`
 	ScoreScript   string `json:"score_script" example:"script example"`
+	ScoreMap      string `json:"score_map" example:"Score Map for get question info"`
 }
 
 // GetQuestionScripts is a function to get the scripts for a question
@@ -1057,6 +1080,7 @@ func GetQuestionScripts(c *gin.Context) {
 			CompileScript: questionTestScript.CompileScript,
 			ExecuteScript: questionTestScript.ExecuteScript,
 			ScoreScript:   questionTestScript.ScoreScript,
+			ScoreMap:      questionTestScript.ScoreMap,
 		},
 	})
 }
